Adding chagnges in index.htm, I changed the Let's connect to a link, and  Kindly replace every child element with section tag with generic div

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -39,6 +39,10 @@ body {
     margin-left: 8px;
   }
 
+  .lest-connect-text #button-connect {
+    margin-bottom: 8px;
+  }
+
   #navbar {
     gap: 3px;
     justify-content: center;
